creating chat bots with python - part three

--- a/Deep Learning for NLP/Creating Chat Bots with Python.ipynb
+++ b/Deep Learning for NLP/Creating Chat Bots with Python.ipynb
@@ -370,7 +370,15 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.preprocessing.sequence import pad_sequences\n",
     "from keras.preprocessing.text import Tokenizer"
@@ -394,43 +402,43 @@
     {
      "data": {
       "text/plain": [
-       "{'football': 1,\n",
-       " 'daniel': 2,\n",
-       " 'mary': 3,\n",
-       " 'down': 4,\n",
-       " 'left': 5,\n",
-       " '.': 6,\n",
-       " 'milk': 7,\n",
-       " 'grabbed': 8,\n",
-       " 'travelled': 9,\n",
-       " 'dropped': 10,\n",
-       " 'bedroom': 11,\n",
-       " 'yes': 12,\n",
-       " 'is': 13,\n",
+       "{'bathroom': 1,\n",
+       " 'put': 2,\n",
+       " 'hallway': 3,\n",
+       " 'daniel': 4,\n",
+       " 'down': 5,\n",
+       " 'back': 6,\n",
+       " 'picked': 7,\n",
+       " 'the': 8,\n",
+       " 'up': 9,\n",
+       " 'journeyed': 10,\n",
+       " 'john': 11,\n",
+       " 'went': 12,\n",
+       " 'travelled': 13,\n",
        " 'garden': 14,\n",
-       " 'bathroom': 15,\n",
-       " '?': 16,\n",
-       " 'office': 17,\n",
-       " 'to': 18,\n",
-       " 'hallway': 19,\n",
-       " 'no': 20,\n",
-       " 'in': 21,\n",
-       " 'back': 22,\n",
-       " 'moved': 23,\n",
-       " 'journeyed': 24,\n",
-       " 'picked': 25,\n",
-       " 'put': 26,\n",
-       " 'there': 27,\n",
-       " 'up': 28,\n",
-       " 'the': 29,\n",
-       " 'john': 30,\n",
-       " 'went': 31,\n",
-       " 'apple': 32,\n",
-       " 'got': 33,\n",
+       " 'took': 15,\n",
+       " 'kitchen': 16,\n",
+       " 'left': 17,\n",
+       " 'yes': 18,\n",
+       " 'no': 19,\n",
+       " 'in': 20,\n",
+       " 'football': 21,\n",
+       " 'grabbed': 22,\n",
+       " 'dropped': 23,\n",
+       " 'apple': 24,\n",
+       " 'office': 25,\n",
+       " '?': 26,\n",
+       " 'mary': 27,\n",
+       " '.': 28,\n",
+       " 'discarded': 29,\n",
+       " 'to': 30,\n",
+       " 'is': 31,\n",
+       " 'moved': 32,\n",
+       " 'milk': 33,\n",
        " 'sandra': 34,\n",
-       " 'took': 35,\n",
-       " 'discarded': 36,\n",
-       " 'kitchen': 37}"
+       " 'bedroom': 35,\n",
+       " 'got': 36,\n",
+       " 'there': 37}"
       ]
      },
      "execution_count": 25,
@@ -467,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +493,7 @@
        "10000"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,11 +545,265 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "inputs_test, queries_test, answers_test = vectorize_stories(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import Sequential, Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.layers.embeddings import Embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.layers import Input, Activation, Dense, Permute, Dropout, add, dot, concatenate, LSTM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Placeholder shape=(max_story_len, batch_size)\n",
+    "input_sequence = Input((max_story_len,))\n",
+    "question = Input((max_question_len,))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab_size = len(vocab) + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Input encoder M\n",
+    "input_encoder_m = Sequential()\n",
+    "input_encoder_m.add(Embedding(input_dim=vocab_size, output_dim=64))\n",
+    "input_encoder_m.add(Dropout(0.3))\n",
+    "\n",
+    "# Outputs\n",
+    "# (Samples, story max len, embedding dimension)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Input encoder C\n",
+    "input_encoder_c = Sequential()\n",
+    "input_encoder_c.add(Embedding(input_dim=vocab_size, output_dim=max_question_len))\n",
+    "input_encoder_c.add(Dropout(0.3))\n",
+    "\n",
+    "# Outputs\n",
+    "# (Samples, story max len, max_question_len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Question encoder\n",
+    "question_encoder = Sequential()\n",
+    "question_encoder.add(Embedding(input_dim=vocab_size, output_dim=64, input_length=max_question_len))\n",
+    "question_encoder.add(Dropout(0.3))\n",
+    "\n",
+    "# Outputs\n",
+    "# (Samples, questions max len, embedding dimension)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ENCODED <---- ECONDER(INPUT)\n",
+    "input_encoded_m = input_encoder_m(input_sequence)\n",
+    "input_encoded_c = input_encoder_c(input_sequence)\n",
+    "question_encoded = question_encoder(question)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "match = dot([input_encoded_m, question_encoded], axes=(2, 2))\n",
+    "match = Activation('softmax')(match)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = add([match, input_encoded_c])\n",
+    "response = Permute((2, 1))(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "answer = concatenate([response, question_encoded])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor 'concatenate_1/concat:0' shape=(None, 6, 220) dtype=float32>"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "answer = LSTM(32)(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "answer = Dropout(0.5)(answer)\n",
+    "answer = Dense(vocab_size)(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "answer = Activation('softmax')(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Model([input_sequence, question], answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer='rmsprop', loss='categorical_crossentropy', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_1\"\n",
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "input_1 (InputLayer)            (None, 156)          0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "input_2 (InputLayer)            (None, 6)            0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "sequential_1 (Sequential)       multiple             2432        input_1[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "sequential_3 (Sequential)       (None, 6, 64)        2432        input_2[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "dot_1 (Dot)                     (None, 156, 6)       0           sequential_1[1][0]               \n",
+      "                                                                 sequential_3[1][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "activation_1 (Activation)       (None, 156, 6)       0           dot_1[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "sequential_2 (Sequential)       multiple             228         input_1[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "add_1 (Add)                     (None, 156, 6)       0           activation_1[0][0]               \n",
+      "                                                                 sequential_2[1][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "permute_1 (Permute)             (None, 6, 156)       0           add_1[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "concatenate_1 (Concatenate)     (None, 6, 220)       0           permute_1[0][0]                  \n",
+      "                                                                 sequential_3[1][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "lstm_1 (LSTM)                   (None, 32)           32384       concatenate_1[0][0]              \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_4 (Dropout)             (None, 32)           0           lstm_1[0][0]                     \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_1 (Dense)                 (None, 38)           1254        dropout_4[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "activation_2 (Activation)       (None, 38)           0           dense_1[0][0]                    \n",
+      "==================================================================================================\n",
+      "Total params: 38,730\n",
+      "Trainable params: 38,730\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
    ]
   },
   {
