creating chat bots with python - part four

--- a/Deep Learning for NLP/Creating Chat Bots with Python.ipynb
+++ b/Deep Learning for NLP/Creating Chat Bots with Python.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "os.environ['KMP_DUPLICATE_LIB_OK'] = 'True'\n",
+    "\n",
     "import pickle\n",
     "import numpy as np"
    ]
@@ -402,42 +405,42 @@
     {
      "data": {
       "text/plain": [
-       "{'bathroom': 1,\n",
-       " 'put': 2,\n",
-       " 'hallway': 3,\n",
-       " 'daniel': 4,\n",
-       " 'down': 5,\n",
-       " 'back': 6,\n",
-       " 'picked': 7,\n",
-       " 'the': 8,\n",
-       " 'up': 9,\n",
-       " 'journeyed': 10,\n",
-       " 'john': 11,\n",
-       " 'went': 12,\n",
-       " 'travelled': 13,\n",
-       " 'garden': 14,\n",
-       " 'took': 15,\n",
-       " 'kitchen': 16,\n",
-       " 'left': 17,\n",
-       " 'yes': 18,\n",
-       " 'no': 19,\n",
-       " 'in': 20,\n",
+       "{'john': 1,\n",
+       " 'hallway': 2,\n",
+       " 'picked': 3,\n",
+       " 'bathroom': 4,\n",
+       " 'took': 5,\n",
+       " 'yes': 6,\n",
+       " 'put': 7,\n",
+       " 'up': 8,\n",
+       " 'the': 9,\n",
+       " 'bedroom': 10,\n",
+       " '?': 11,\n",
+       " 'no': 12,\n",
+       " 'milk': 13,\n",
+       " 'kitchen': 14,\n",
+       " 'moved': 15,\n",
+       " '.': 16,\n",
+       " 'down': 17,\n",
+       " 'daniel': 18,\n",
+       " 'discarded': 19,\n",
+       " 'got': 20,\n",
        " 'football': 21,\n",
-       " 'grabbed': 22,\n",
-       " 'dropped': 23,\n",
-       " 'apple': 24,\n",
-       " 'office': 25,\n",
-       " '?': 26,\n",
-       " 'mary': 27,\n",
-       " '.': 28,\n",
-       " 'discarded': 29,\n",
-       " 'to': 30,\n",
-       " 'is': 31,\n",
-       " 'moved': 32,\n",
-       " 'milk': 33,\n",
-       " 'sandra': 34,\n",
-       " 'bedroom': 35,\n",
-       " 'got': 36,\n",
+       " 'office': 22,\n",
+       " 'went': 23,\n",
+       " 'sandra': 24,\n",
+       " 'in': 25,\n",
+       " 'garden': 26,\n",
+       " 'grabbed': 27,\n",
+       " 'left': 28,\n",
+       " 'is': 29,\n",
+       " 'dropped': 30,\n",
+       " 'back': 31,\n",
+       " 'to': 32,\n",
+       " 'journeyed': 33,\n",
+       " 'mary': 34,\n",
+       " 'travelled': 35,\n",
+       " 'apple': 36,\n",
        " 'there': 37}"
       ]
      },
@@ -804,6 +807,236 @@
    ],
    "source": [
     "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# history = model.fit(\n",
+    "#     [inputs_train, queries_train],\n",
+    "#     answers_train,\n",
+    "#     batch_size=32,\n",
+    "#     epochs=3,\n",
+    "#     validation_data=([inputs_test, queries_test], answers_test)\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.load_weights('chatbot_10.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_results = model.predict(([inputs_test, queries_test]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_max = np.argmax(pred_results[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for key, val in tokenizer.word_index.items():\n",
+    "    if val == val_max:\n",
+    "        k = key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'yes'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9367328"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred_results[0][val_max]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_story = \"John left the kitchen . Sandra dropped the football in the garden .\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['John',\n",
+       " 'left',\n",
+       " 'the',\n",
+       " 'kitchen',\n",
+       " '.',\n",
+       " 'Sandra',\n",
+       " 'dropped',\n",
+       " 'the',\n",
+       " 'football',\n",
+       " 'in',\n",
+       " 'the',\n",
+       " 'garden',\n",
+       " '.']"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_story.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_question = \"Is the football in the garden ?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Is', 'the', 'football', 'in', 'the', 'garden', '?']"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_question.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mydata = [(my_story.split(), my_question.split(), 'yes')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_story, my_quest, my_ans = vectorize_stories(mydata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_results = model.predict(([my_story, my_quest]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_max = np.argmax(pred_results[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for key, val in tokenizer.word_index.items():\n",
+    "    if val == val_max:\n",
+    "        k = key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'yes'"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k"
    ]
   },
   {
